<resources>
    <string name="app_title">매일 글귀</string>
    <string name="favorite">좋아요</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="kakao_link_share">카카오톡으로 공유하기</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="simple_login">3초만에 로그인 하기</string>
    <string name="more_see">자세히 보기</string>
    <string name="my_page_title">내 정보</string>
    <string name="unsubscribed_title">서비스 탈퇴</string>
    <string name="share_app">앱 공유하기</string>
    <string name="leave_review">앱 리뷰 남기기</string>
    <string name="logout">로그아웃</string>
    <string name="login_and_share_message">로그인하고\n글귀를 공유해 보세요</string>
    <string name="login_and_like_message">로그인하고\n글귀에 관심을 표현하세요.</string>
    <string name="login_and_bookmark_message">로그인하고\n글귀를 관리해 보세요.</string>
    <string name="unsubscribe_service">서비스 탈퇴</string>
    <string name="message_before_leaving">탈퇴하기 전에 꼭 확인해주세요.</string>
    <string name="unsubscribe_message_title_1">즐겨찾는 글귀가 모두 사라져요.</string>
    <string name="unsubscribe_message_subtitle_1">탈퇴하면 돌릴 수 없어요.</string>
    <string name="unsubscribe_message_title_2">소중한 사람들에게\n글귀를 공유할 수가 없어요.</string>
    <string name="unsubscribe_message_subtitle_2">글귀를 공유하기 위해서는 로그인이 필요해요.</string>
    <string name="confirm_unsubscribe_service">그래도 탈퇴할게요.</string>
    <string name="user_name_suffix">"님\n"</string>
    <string name="default_view_count">0</string>
    <string name="default_like_count">0</string>
    <string name="all_phrase">모든 글귀</string>
    <string name="close">닫기</string>
    <string name="confirm_logout">정말 로그아웃할까요?</string>
    <string name="keep_logged_in">로그인 유지하기</string>
    <string name="bookmar_no_list">마음에 드는 글귀를 찾아서 저장해 보세요.</string>
    <string name="bookmark_snackbar_message">즐겨찾기에 추가되었습니다!</string>
    <string name="bookmark_snackbar_action_label">공유하기</string>
    <string name="success_logout">로그아웃 되었습니다.</string>
    <string name="success_delete_member">탈퇴 되었습니다.</string>
    <string name="failure_request">문제가 발생했어요.\n잠시 후에 다시 시도해주세요.</string>
    <string name="confirm">확인</string>
    <string name="speak_tts">음성으로 듣기</string>
    <string name="test_speak_tts">지난 한 해 동안 헌신해주신 사랑과 은혜에 감사드립니다. 늘 건강하시고 행복과 김평안이 가득한 한 해를 보내시기를 바랍니다.</string>
    <string name="login_success_desc">로그인 성공! 다시 시도 해보세요.</string>
    <string name="privacy_policy_title">개인정보 처리방침</string>
    <string name="feature_under_construction">준비 중인 기능입니다.</string>
    <string name="app_download">앱 다운로드</string>
    <string name="failure_load_message">새로운 글귀를 가져올 수 없어요.\n네트워크 상태를 확인해주세요.</string>
    <string name="retry">재시도</string>
    <string name="login_prompt">로그인하고</string>
    <string name="claim_reward">받아가세요!</string>
    <string name="reward_date_suffix">%1$d월 이벤트</string>
    <string name="reward_participation_suffix">%1$d명 참여중</string>
    <string name="reward_popup_text_prefix">응모하고</string>
    <string name="reward_popup_text_suffix">받기</string>
    <string name="event_timer_text_prefix">이벤트 마감까지</string>
    <string name="event_timer_text_suffix">남음</string>
    <string name="share_this_quote">이 글귀 공유하기</string>
    <string name="acquirable_ticket_reset_timer_text_suffix">뒤에</string>
    <string name="acquirable_ticket_reset_info_text">응모권을 받을 수 있어요</string>
    <string name="get_ticket_title">응모권을 받았어요!</string>
    <string name="prize_event">경품 응모 이벤트</string>
    <string name="remaining_entry_period">남은 응모 기간 %s</string>
    <string name="entry_count_message">이 상품에 %d회 응모했어요</string>
    <string name="submit_entries">%d장으로 응모하기</string>
    <string name="my_entries">내 응모권 %d장</string>
    <string name="required_tickets">%d장 필요</string>
    <!-- \u0020는 띄어쓰기를 의미함. marquee 효과를 위해서는 충분히 긴 텍스트가 필요해 임의로 넣음. -->
    <string name="event_finish">%d월 이벤트 종료! 다음 이벤트를 기대해 주세요.\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="ticket_received">응모권 <font color="#F26600">5장</font>을\n받았어요!</string> <!-- TODO JH: 갯수 변경 가능성 고려하기 -->
    <string name="not_enough_entry_guide">글귀를 공유하고 응모권을 모아보세요</string>
    <string name="event_result_release_date_guide">%s에\n응모 결과를\n확인해 주세요</string>
    <string name="confirm_entry_result">응모 결과 확인하기</string>
    <string name="congratulation">당첨을 축하해요!</string>
    <string name="input_phone_number_guide">남겨주신 연락처로\n선물을 받을 수 있는 링크를 전달해드릴게요.</string>
    <string name="input_phone_number_hint">010-0000-0000</string>
    <string name="input_phone_number">연락처 입력하기</string>
    <string name="entry_result_missed">아쉽게도 당첨되지 않았어요.</string>
    <string name="entry_result_winning"><![CDATA[<font color="#FF7900">%s</font>]]>으로 선물 발송 예정 (2일 이내)</string>
    <string name="entry_success_tooltip_message">응모완료! <![CDATA[<font color="#FF7900">당첨 확률이 높아졌어요</font>]]></string>

    <string name="home_reward_check_ended_event">"%1$d월 이벤트 확인하기"</string>
    <string name="home_reward_announcement_winner">당첨자 발표 안내</string>
    <string name="home_reward_popup_share_quote_prefix">글귀 공유하면</string>
    <string name="home_reward_popup_share_quote_suffix">응모권이 생겨요</string>
    <string name="welcome_event_model_login_and_get_prize">로그인하고 경품 받아가세요</string>
    <string name="welcome_event_model_participation_count">%d명이 이벤트에 참여중</string>
    <string name="invalid_phone_number_message">올바른 연락처를 입력해주세요.</string>
    <string name="date_format_month_day">%s월 %s일</string>
</resources>
