<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="자식사랑 내리사랑"/>

    <TextView
        android:id="@+id/tv_preview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textColor="#64696B"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="어느날 시계를 보다가 문득 이런 생각을 한 적이 있습니다. 성급한 사람, 무덤덤한 사람, 아무 생각이 없는 사람"/>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preview_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:background="@color/material_dynamic_secondary60" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bookmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="6dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cl_view">

        <ImageView
            android:id="@+id/iv_bookmark"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_bookmark"
            app:tint="#64696B"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/tv_bookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_bookmark"
            app:layout_constraintEnd_toStartOf="@id/tv_bookmark"/>

        <TextView
            android:id="@+id/tv_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark"
            android:textSize="14sp"
            android:textColor="#64696B"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_bookmark"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@id/cl_bookmark"
        app:layout_constraintBottom_toBottomOf="@id/cl_bookmark"
        app:layout_constraintStart_toEndOf="@id/cl_bookmark"
        app:layout_constraintEnd_toStartOf="@id/cl_like">

        <ImageView
            android:id="@+id/iv_view"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_view"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:tint="#64696B"
            app:layout_constraintTop_toTopOf="@id/tv_view"
            app:layout_constraintBottom_toBottomOf="@id/tv_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_view"/>

        <TextView
            android:id="@+id/tv_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/default_view_count"
            android:textColor="#64696B"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_view"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1,020,104"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@id/cl_view"
        app:layout_constraintBottom_toBottomOf="@id/cl_view"
        app:layout_constraintStart_toEndOf="@id/cl_view"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_like"
            app:tint="#64696B"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/tv_like"
            app:layout_constraintBottom_toBottomOf="@id/tv_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_like"/>

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/default_like_count"
            android:textColor="#64696B"
            app:layout_constraintTop_toTopOf="@id/iv_like"
            app:layout_constraintStart_toEndOf="@id/iv_like"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="9,999"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>